[project]
name = "visualizelob"
version = "0.1.0"
description = "Limit Order Book (LOB) dynamic visualization tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.13",
    "plotly>=5.22",
    "matplotlib>=3.9",
    "pyarrow>=16.0",
    "jupyterlab>=4.2",
    "nbformat>=5.10",
]
